@@ -1,5 +1,7 @@
 Release ...
 * The "getconf" utility has been added (derived from OpenSolaris code).
+* printf: Handle unsigned values larger than INT_MAX correctly with "%u",
+  "%o", "%x", and "%X".
 
 Release 050713
 * The 'echo' and 'test' commands have been added as standalone versions of
